respond to comments

--- a/bands-2018-12-10/bands-map.html
+++ b/bands-2018-12-10/bands-map.html
@@ -23,7 +23,7 @@
     var matches = [
       {
         lineColor: '#CDB87D',
-        lineText: "Pitt Band traveled to Charlotte, N.C. to play for the mens football ACC Championship game versus the Clemson Tigers.",
+        lineText: "Pitt Band traveled about seven hours to Charlotte, N.C. to play for the men's football ACC Championship game against the Clemson Tigers.",
         teams: [
           { name: 'Bank of America Stadium', coords: [35.2258, -80.8528] },
           { name: 'Cathedral of Learning', coords: [40.4443, -79.9532] }
@@ -31,7 +31,7 @@
       },
       {
         lineColor: '#006341',
-        lineText: "Slippery Rock's Marching Pride Band traveled to PPG Paints Arena to play for the mens basketball team City Game versus the Duquesne Dukes.",
+        lineText: "Slippery Rock's Marching Pride Band traveled about an hour to PPG Paints Arena to play for the men's basketball team City Game against the Duquesne Dukes.",
         teams: [
           { name: 'Slippery Rock University of Pennsylvania', coords: [41.0633, -80.0375] },
           { name: 'PPG Paints Arena', coords: [40.4396, -79.9893] },
@@ -40,7 +40,7 @@
       {
         lineColor: '#BA0C2F',
         lineCoords: [40.442420, -79.969992],
-        lineText: "Duquesne University's Pep Band traveled to the Petersen Events Center to play for the women's Volleyball team NCAA tournament game versus the Michigan Wolverines.",
+        lineText: "Duquesne University's Pep Band traveled about ten minutes to the Petersen Events Center to play for the women's volleyball team NCAA tournament game against the Michigan Wolverines.",
         teams: [
           { name: 'Duquesne University', coords: [40.438026, -79.994026] },
           { name: 'Petersen Events Center', coords: [40.4438, -79.9623] }
