--- a/compensation-2019-01-14/compensation.html
+++ b/compensation-2019-01-14/compensation.html
@@ -2,13 +2,5 @@
 <head>
 </head>
 <body>
-  <div style="height: 80vh;">
-    <iframe src='https://public.flourish.studio/visualisation/197013/embed' width='100%' height='100%' frameborder='0' scrolling='no'></iframe>
-    <div style='width:100%!;margin-top:4px!important;text-align:right!important;'>
-      <a class='flourish-credit' href='https://public.flourish.studio/visualisation/187897/?utm_source=embed&utm_campaign=visualisation/187897' target='_top' style='text-decoration:none!important'>
-        <img alt='Made with Flourish' src='https://public.flourish.studio/resources/made_with_flourish.svg' style='width:105px!important;height:16px!important;border:none!important;margin:0!important;'>
-      </a>
-    </div>
-  </div>
+  <div class="flourish-embed" data-src="visualisation/197013"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 </body>
-
