--- a/chancellor-2019-01-21/residence.html
+++ b/chancellor-2019-01-21/residence.html
@@ -23,7 +23,7 @@
     var map = L.map('map').setView(coords, 16);
 
     L.marker(coords)
-      .bindTooltip('<p><b>Pitt Chancellor Residence</b></p><p>Valued by Allegheny County at $1,512,200 in 2019.', { permanent: true })
+      .bindTooltip("<p><b>Pitt Chancellor's Residence</b></p><p>Valued by Allegheny County at over $1.5 million in 2019.", { permanent: true })
       .addTo(map)
       .openTooltip();
 
