--- a/best-of-2019-01-24/restaurants-oakland.html
+++ b/best-of-2019-01-24/restaurants-oakland.html
@@ -34,6 +34,7 @@
             .addTo(map)
         });
         map.fitBounds(restaurants.map((r) => { return r.coords; }));
+        map.zoomOut(1);
     L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}{r}.png', {
       attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> &copy; <a href="http://cartodb.com/attributions">CartoDB</a>',
       subdomains: 'abcd',
