--- a/best-of-2019-01-24/riteaid.html
+++ b/best-of-2019-01-24/riteaid.html
@@ -22,7 +22,7 @@
     var map = L.map('map').setView(coords, 17);
 
     L.marker(coords)
-      .bindTooltip('<p> <b> Rite Aid </b> </p> <p> 3700 Forbes Avenue </p>', { permanent: true })
+      .bindTooltip('<p><b>Rite Aid</b></p><p>3700 Forbes Ave.</p>', { permanent: true })
       .addTo(map)
       .openTooltip();
 
