--- a/best-of-2019-01-24/coffee.html
+++ b/best-of-2019-01-24/coffee.html
@@ -23,7 +23,7 @@
     var map = L.map('map').setView(coords, 17);
 
     L.marker(coords)
-      .bindTooltip('<p><b>Redhawk Coffee</b></p><p>120 Meyran Avenue</p>', { permanent: true })
+      .bindTooltip('<p><b>Redhawk Coffee</b></p><p>120 Meyran Ave.</p>', { permanent: true })
       .addTo(map)
       .openTooltip();
 
