--- a/antwon-rose/protest-map.html
+++ b/antwon-rose/protest-map.html
@@ -27,15 +27,15 @@
         coords: [40.438685, -79.997249]
       },
         {
-        name: 'Grant Street and Liberty avenue',
+        name: 'Grant Street and Liberty Avenue',
         coords: [40.443867, -79.993838]
       },
       {
-        name: 'Wood street and Liberty avenue',
+        name: 'Wood Street and Liberty Avenue',
         coords: [40.4423931, -79.9988977]
       },
       {
-        name: 'Wood street and Boulevard of the Allies',
+        name: 'Wood Street and Boulevard of the Allies',
         coords: [40.438436, -80.001941]
       },
       {
@@ -43,7 +43,7 @@
         coords: [40.435140, -79.993486]
       },
       {
-        name: 'Grant street and Boulevard of the Allies',
+        name: 'Grant Street and Boulevard of the Allies',
         coords: [40.437072, -79.998350]
       }
     ];
