--- a/beer-wine-2019/cider-map.html
+++ b/beer-wine-2019/cider-map.html
@@ -23,7 +23,7 @@
    var map = L.map('map').setView(coords, 17);
 
    L.marker(coords)
-     .bindTooltip('<h3>Arsenal Cider House</h3> <p>300 39th Street</p>', { permanent: true })
+     .bindTooltip('<h3>Arsenal Cider House</h3> <p>300 39th St.</p>', { permanent: true })
      .addTo(map)
      .openTooltip();
 
