--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -31,22 +31,22 @@
         {number: "16", text: "Bother", labelColumn: 11, labelRow: 2, highlightColumn: `3/6`, highlightRow: 5},
         {number: "17", text: "Person in charge of a 2 p.m. rager?", labelColumn: 1, labelRow: 3, highlightColumn: `9/14`, highlightRow: 5},
         {number: "19", text: "Scoundrel", labelColumn: 11, labelRow: 3, highlightColumn: `1/5`, highlightColumn: 6},
-        {number: "20", text: "State that’s home to Arches National Park", labelColumn: 1, labelRow: 4, highlightColumn: `6/11`, highlightRow: 6},
+        {number: "20", text: "State that's home to Arches National Park", labelColumn: 1, labelRow: 4, highlightColumn: `6/11`, highlightRow: 6},
         {number: "21", text: "Olive genus", labelColumn: 7, labelRow: 4, highlightColumn: `5/10`, highlightRow: 7},
-        {number: "23", text: "Like a large, children’s book series dog", labelColumn: 13, labelRow: 4, highlightColumn: `4/9`, highlightRow: 8},
+        {number: "23", text: "Like a large, children's book series dog", labelColumn: 13, labelRow: 4, highlightColumn: `4/9`, highlightRow: 8},
         {number: "24", text: "A daydream about a Johnson & Johnson product?", labelColumn: 1, labelRow: 5, highlightColumn: `10/14`, highlightRow: 8},
         {number: "29", text: "Federal org. headed by Rick Perry", labelColumn: 5, labelRow: 6, highlightRow: `1/6`, highlightRow: 9},
         {number: "30", text: "Loudness measure", labelColumn: 9, labelRow: 6, highlightColumn: `9/12`, highlightRow: 9},
         /* 33?? */
         {number: "36", text: "Recommended cost of a product", labelColumn: 5, labelRow: 7, highlightColumn: `1/7`, highlightRow: 10},
-        {number: "38", text: '“Don’t Cry for Me, Argentina” musical', labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
+        {number: "38", text: '“Don't Cry for Me, Argentina” musical', labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
         {number: "39", text: "A game show for couples?", labelColumn: 1, labelRow: 8, highlightColumn: `8/12`, highlightRow: 11},
         {number: "43", text: "Me too, to Pierre", labelColumn: 1, labelRow: 9, highlightColumn: `1/9`, highlightRow: 12},
         {number: "44", text: "Online liberals?", labelColumn: 8, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
         {number: "45", text: "Handheld Nintendo consoles", labelColumn: 13, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
         {number: "46", text: "They bend over backwards to descend steps", labelColumn: 1, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
         {number: "49", text: "Phoenician name for Tripoli", labelColumn: 9, labelRow: 10, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "50", text: "Scientist Bill’s approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "50", text: "Scientist Bill's approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
         {number: "56", text: "Spelling ___", labelColumn: 1, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "58", text: "Scowl", labelColumn: 6, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "59", text: '2000 movie “O Brother, Where Art ___”', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
@@ -66,7 +66,7 @@
         {number: "4", text: 'It comes before “L” in a text signoff'},
         {number: "5", text: "End-of-meeting Q", labelColumn: 6},
         {number: "6", text: "Like The Pitt News copy editors", labelColumn: 7},
-        {number: "7", text: '“What’s the largest city in Calif. again?”', labelColumn: 8},
+        {number: "7", text: `“What's the largest city in Calif. again?”`, labelColumn: 8},
         {number: "8", text: "Mail again", labelColumn: 9},
         {number: "9", text: "You can set a high one", labelColumn: 11},
         {number: "10", text: "Mil. liaison", labelColumn: 12},
@@ -76,13 +76,13 @@
         {number: "18", text: "Meas. of noise in a soundwave", labelColumn: 4, labelRow: 3},
         {number: "22", text: "Consumed", labelColumn: 10, labelRow: 4},
         {number: "25", text: "Similar to a party music genre", labelColumn: 5, labelRow: 5},
-        {number: "26", text: "Valentine’s Day flower", labelColumn: 6, labelRow: 5},
+        {number: "26", text: "Valentine's Day flower", labelColumn: 6, labelRow: 5},
         {number: "27", text: "Get a 1520 on a HS junior year exam", labelColumn: 11, labelRow: 5},
         {number: "28", text: "Member of the Hindu holy trinity", labelColumn: 12, labelRow: 5},
         {number: "31", text: "Figs. on airport announcement screens", labelColumn: 14, labelRow: 6},
         {number: "32", text: "Potato chip brand", labelColumn: 15, labelRow: 6},
         {number: "33", text: "Plural of 71-across", labelColumn: 1, labelRow: 7},
-        {number: "34", text: "Ex-con’s status", labelColumn: 2, labelRow: 7},
+        {number: "34", text: "Ex-con's status", labelColumn: 2, labelRow: 7},
         {number: "35", text: '"Cleopatra" band', labelColumn: 3, labelRow: 7},
         {number: "37", text: "Cozy nighttime clothing items", labelColumn: 8, labelRow: 7},
         {number: "40", text: "Like thin hands", labelColumn: 4, labelRow: 8},
