--- a/puzzles/index.html
+++ b/puzzles/index.html
@@ -39,7 +39,7 @@
         {number: "30", text: "Loudness measure", labelColumn: 9, labelRow: 6, highlightColumn: `9/12`, highlightRow: 9},
         /* 33?? */
         {number: "36", text: "Recommended cost of a product", labelColumn: 5, labelRow: 7, highlightColumn: `1/7`, highlightRow: 10},
-        {number: "38", text: '“Don't Cry for Me, Argentina” musical', labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
+        {number: "38", text: `"Don't Cry for Me, Argentina" musical`, labelColumn: 11, labelRow: 7, highlightColumn: `8/14`, highlightRow: 10},
         {number: "39", text: "A game show for couples?", labelColumn: 1, labelRow: 8, highlightColumn: `8/12`, highlightRow: 11},
         {number: "43", text: "Me too, to Pierre", labelColumn: 1, labelRow: 9, highlightColumn: `1/9`, highlightRow: 12},
         {number: "44", text: "Online liberals?", labelColumn: 8, labelRow: 9, highlightColumn: `8/14`, highlightRow: 13},
@@ -49,7 +49,7 @@
         {number: "50", text: "Scientist Bill's approach to zero?", labelColumn: 3, labelRow: 11, highlightColumn: `8/14`, highlightRow: 13},
         {number: "56", text: "Spelling ___", labelColumn: 1, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "58", text: "Scowl", labelColumn: 6, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
-        {number: "59", text: '2000 movie “O Brother, Where Art ___”', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
+        {number: "59", text: '2000 movie "O Brother, Where Art ___"', labelColumn: 12, labelRow: 12, highlightColumn: `8/14`, highlightRow: 13},
         {number: "60", text: "Black cats, for example", labelColumn: 1, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
         {number: "63", text: "Texas Tech, Virginia, Auburn and Michigan State... or a hint to the words in circled letters", labelColumn: 7, labelRow: 13, highlightColumn: `8/14`, highlightRow: 13},
         {number: "66", text: "Like much of Iowa", labelColumn: 1, labelRow: 14, highlightColumn: `8/14`, highlightRow: 13},
@@ -63,10 +63,10 @@
         {number: '1', text: "Done (with)"},
         {number: "2", text: "Latin for beloved", labelColumn: 2},
         {number: "3", text: "The last ____", labelColumn: 3},
-        {number: "4", text: 'It comes before “L” in a text signoff'},
+        {number: "4", text: 'It comes before "L" in a text signoff'},
         {number: "5", text: "End-of-meeting Q", labelColumn: 6},
         {number: "6", text: "Like The Pitt News copy editors", labelColumn: 7},
-        {number: "7", text: `“What's the largest city in Calif. again?”`, labelColumn: 8},
+        {number: "7", text: `"What's the largest city in Calif. again?"`, labelColumn: 8},
         {number: "8", text: "Mail again", labelColumn: 9},
         {number: "9", text: "You can set a high one", labelColumn: 11},
         {number: "10", text: "Mil. liaison", labelColumn: 12},
@@ -87,12 +87,12 @@
         {number: "37", text: "Cozy nighttime clothing items", labelColumn: 8, labelRow: 7},
         {number: "40", text: "Like thin hands", labelColumn: 4, labelRow: 8},
         {number: "41", text: "Reporters for online publications?", labelColumn: 9, labelRow: 8},
-        {number: "42", text: 'Actor Wilson that “wows” audience', labelColumn: 10, labelRow: 8},
+        {number: "42", text: 'Actor Wilson that "wows" audience', labelColumn: 10, labelRow: 8},
         {number: "47", text: "Fr. fashion house", labelColumn: 6, labelRow: 10},
         {number: "48", text: "Laughs (at)", labelColumn: 7, labelRow: 10},
         {number: "51", text: "Spooky board", labelColumn: 8, labelRow: 11},
         {number: "52", text: "Tinder question?", labelColumn: 12, labelRow: 11},
-        {number: "53", text: '“What have we here?”', labelColumn: 13, labelRow: 11},
+        {number: "53", text: '"What have we here?"', labelColumn: 13, labelRow: 11},
         {number: "54", text: "Could, should counterpart", labelColumn: 14, labelRow: 11},
         {number: "55", text: "Medical professional", labelColumn: 15, labelRow: 11},
         {number: "56", text: "Be tedious", labelColumn: 1, labelRow: 12},
